P4ADEV-3435 Implement native API status-export
