# openapi/p4pa-pu-sil.openapi.yaml
@@ -373,7 +373,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/PuSilErrorDTO'
-  /sil/organization/{orgFiscalCode}/export/status/{exportId}:
+  /sil/organization/{orgFiscalCode}/export/{exportId}:
     get:
       tags:
         - Export
@@ -849,17 +849,7 @@ components:
         exportId:
           type: string
         status:
-          type: string
-          enum:
-            - TO_PROCESS
-            - PROCESSING
-            - PROCESSED_OK
-            - PROCESSED_ERROR
-            - PROCESSED_NO_DATA
-            - PROCESSED_MAX_ROWS_EXCEEDED
-        lastUpdateDateTime:
-          type: string
-          format: date-time
+          type: 'ExportFileStatus'
         downloadUrl:
           $ref: "#/components/schemas/DownloadUrl"
     PaymentDTO:
